--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cayenne.team.merv" >
 
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- Creating Permission to receive Google Maps -->
+    <permission
+        android:name="cayenne.team.merv.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <!-- Permission to receive Google Maps -->
+    <uses-permission android:name="cayenne.team.merv.permission.MAPS_RECEIVE" />
+
+    <!-- Maps API needs OpenGL ES 2.0. -->
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -12,9 +25,16 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyB9HluANACWkK9vuQyHPi8rHuWlJORzhn4" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <!-- Splash screen -->
         <activity
-            android:name=".SplashScreen"
+            android:name=".Login.SplashScreen"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" >
@@ -25,37 +45,38 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Main.MainActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
-            android:name=".SurveyUserActivity"
+            android:name=".Login.SurveyUserActivity"
             android:label="@string/title_activity_survey_user" >
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".Login.LoginActivity"
             android:label="@string/title_activity_login"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".SignUpActivity"
+            android:name=".Login.SignUpActivity"
             android:label="@string/title_activity_sign_up"
-            android:parentActivityName=".LoginActivity"
+            android:parentActivityName=".Login.LoginActivity"
             android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="cayenne.team.merv.LoginActivity" />
+                android:value=".Login.LoginActivity" />
         </activity>
         <activity
-            android:name=".TaskMainActivity"
+            android:name=".Main.Tabs.Tasks.Tabs.TaskMainActivity"
             android:label="@string/title_activity_task_main"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".Main.MainActivity"
             android:theme="@style/AppTheme" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="cayenne.team.merv.MainActivity" />
+                android:value=".Main.MainActivity" />
         </activity>
+
     </application>
 
 </manifest>
